<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/new_alarm_clock_llyt"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_weight="0"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:gravity="center"
                android:text="Cancel"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="Edit Alarm"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:text="Save"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical" />

                <TextView
                    android:id="@+id/time_picker_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp" />

                <TimePicker
                    android:id="@+id/time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:layout_marginTop="2dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:orientation="horizontal">

                    <LinearLayout style="@style/new_alarm_clock_repeat_days_llyt">

                        <ToggleButton
                            android:id="@+id/tog_btn_monday"
                            style="@style/new_alarm_clcok_repeat_days_tog_btn"
                            android:textOff="@string/monday"
                            android:textOn="@string/monday"></ToggleButton>
                    </LinearLayout>

                    <LinearLayout style="@style/new_alarm_clock_repeat_days_llyt">

                        <ToggleButton
                            android:id="@+id/tog_btn_tuesday"
                            style="@style/new_alarm_clcok_repeat_days_tog_btn"
                            android:textOff="@string/tuesday"
                            android:textOn="@string/tuesday"></ToggleButton>
                    </LinearLayout>

                    <LinearLayout style="@style/new_alarm_clock_repeat_days_llyt">

                        <ToggleButton
                            android:id="@+id/tog_btn_wednesday"
                            style="@style/new_alarm_clcok_repeat_days_tog_btn"
                            android:textOff="@string/wednesday"
                            android:textOn="@string/wednesday"></ToggleButton>
                    </LinearLayout>

                    <LinearLayout style="@style/new_alarm_clock_repeat_days_llyt">

                        <ToggleButton
                            android:id="@+id/tog_btn_thursday"
                            style="@style/new_alarm_clcok_repeat_days_tog_btn"
                            android:textOff="@string/thursday"
                            android:textOn="@string/thursday"></ToggleButton>
                    </LinearLayout>

                    <LinearLayout style="@style/new_alarm_clock_repeat_days_llyt">

                        <ToggleButton
                            android:id="@+id/tog_btn_friday"
                            style="@style/new_alarm_clcok_repeat_days_tog_btn"
                            android:textOff="@string/friday"
                            android:textOn="@string/friday"></ToggleButton>
                    </LinearLayout>

                    <LinearLayout style="@style/new_alarm_clock_repeat_days_llyt">

                        <ToggleButton
                            android:id="@+id/tog_btn_saturday"
                            style="@style/new_alarm_clcok_repeat_days_tog_btn"
                            android:textOff="@string/saturday"
                            android:textOn="@string/saturday"></ToggleButton>
                    </LinearLayout>

                    <LinearLayout style="@style/new_alarm_clock_repeat_days_llyt">

                        <ToggleButton
                            android:id="@+id/tog_btn_sunday"
                            style="@style/new_alarm_clcok_repeat_days_tog_btn"
                            android:textOff="@string/sunday"
                            android:textOn="@string/sunday"></ToggleButton>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/new_alarm_clcok_item"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:background="@drawable/bg_record_operate_item">

                    <TextView
                        style="@style/new_alarm_clcok_item_type"
                        android:layout_marginLeft="6dp"
                        android:text="@string/text_name" />

                    <TextView
                        android:id="@+id/txt_name"
                        style="@style/new_alarm_clcok_item_describe"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:drawablePadding="5dp"
                        android:drawableRight="@drawable/ic_more_arrow_dark"
                        android:ellipsize="end"
                        android:maxWidth="230dp"
                        android:singleLine="true"
                        android:text="@string/default_name" />
                </LinearLayout>

                <View style="@style/divider_line" />

                <LinearLayout
                    android:id="@+id/ring_llyt"
                    style="@style/new_alarm_clcok_item"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="13dp"
                    android:background="@drawable/bg_record_operate_item">

                    <TextView
                        style="@style/new_alarm_clcok_item_type"
                        android:layout_marginLeft="6dp"
                        android:text="@string/text_sound" />

                    <TextView
                        android:id="@+id/ring_describe"
                        style="@style/new_alarm_clcok_item_describe"
                        android:layout_marginRight="6dp"
                        android:drawablePadding="5dp"
                        android:drawableRight="@drawable/ic_more_arrow_dark"
                        android:ellipsize="end"
                        android:maxWidth="230dp"
                        android:singleLine="true"
                        android:text="@string/default_ring" />
                </LinearLayout>


                <View style="@style/divider_line" />

                <View style="@style/divider_line" />

                <LinearLayout style="@style/new_alarm_clcok_item">

                    <TextView
                        style="@style/new_alarm_clcok_item_type"
                        android:text="@string/text_vibrate" />

                    <ToggleButton
                        android:id="@+id/vibrate_btn"
                        style="@style/new_alarm_clcok_item_toggle_btn"></ToggleButton>
                </LinearLayout>

                <View style="@style/divider_line" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>