<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="@string/text_use_24_format" />

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="53dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/toggle_selector"
                android:checked="false"
                android:layout_gravity="center"
                android:text=""
                android:layout_marginRight="10dp"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <View style="@style/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="@string/text_vibrate" />

            <ToggleButton
                android:id="@+id/toggleButton2"
                android:layout_width="53dp"
                android:layout_height="32dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/toggle_selector"
                android:checked="false"
                android:layout_gravity="center"
                android:text=""
                android:layout_marginRight="10dp"
                android:textOff=""
                android:textOn="" />
        </LinearLayout>

        <View style="@style/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="@string/text_default_sound" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:layout_marginRight="6dp"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_more_arrow_dark"
                android:ellipsize="end"
                android:maxWidth="230dp"
                android:singleLine="true"
                android:text="@string/default_name"/>
        </LinearLayout>


        <View style="@style/divider_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:text="@string/text_default_snooze_time" />

            <TextView
                android:id="@+id/txt_snooze_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@android:color/black"
                android:layout_marginRight="6dp"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/ic_more_arrow_dark"
                android:ellipsize="end"
                android:maxWidth="230dp"
                android:singleLine="true"
                android:text="@string/default_name"/>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>